--- a/ArchComponentsAnalyst/app/src/main/res/values/strings.xml
+++ b/ArchComponentsAnalyst/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ArchComponentsAnalyst</string>
+    <string name="activity_label_workmanager">WorkManager</string>
 </resources>
